# projeto-1-SOA

./: README.md  docker-compose.yaml  go.mod  pyproject.toml
app_a_event/: Dockerfile  deck.py  main.py
app_a_grpc/: Dockerfile  main.py
app_b_grpc/: Dockerfile  main.go  sticker.pb.go  sticker_grpc.pb.go
app_c_rest_grpc/: Dockerfile  client.py  deck.py  main.py  sticker_pb2.py  sticker_pb2_grpc.py
appmain/: Dockerfile  main.py  settings.py
proto/: sticker.pb.go  sticker.proto
